// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders 1`] = `
<div
  class="betweenBottomMarginDesktop-2 stack"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      data-no-global-styles="true"
      for="the-select"
    >
      <div
        class="betweenRightMarginDesktop-2 inline alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The select
        </span>
      </div>
    </label>
  </div>
  <div
    class="wrapper"
  >
    <select
      aria-invalid="false"
      class="default select positionSelectOnTop"
      data-no-global-styles="true"
      id="the-select"
    >
      <option
        data-no-global-styles="true"
        value="value-1"
      >
        text one
      </option>
      <option
        data-no-global-styles="true"
        value="value-2"
      >
        text two
      </option>
    </select>
    <div
      class="feedbackIconPosition"
    />
    <div
      class="fixLineHeight caretPosition"
    >
      <i
        aria-hidden="true"
        class="iconCaretDown primary size16"
      />
    </div>
  </div>
</div>
`;

exports[`Select renders with a feedback state and icon 1`] = `
<div
  class="betweenBottomMarginDesktop-2 stack"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      data-no-global-styles="true"
      for="the-select"
    >
      <div
        class="betweenRightMarginDesktop-2 inline alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The select
        </span>
      </div>
    </label>
  </div>
  <div
    class="wrapper"
  >
    <select
      aria-invalid="true"
      class="error select positionSelectOnTop"
      data-no-global-styles="true"
      id="the-select"
    >
      <option
        data-no-global-styles="true"
        value="value-1"
      >
        text one
      </option>
      <option
        data-no-global-styles="true"
        value="value-2"
      >
        text two
      </option>
    </select>
    <div
      class="feedbackIconPosition"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="fixLineHeight"
        >
          <i
            aria-label="The value of this input field is invalid."
            class="iconExclamationPointCircle error size16"
          />
        </div>
      </div>
    </div>
    <div
      class="fixLineHeight caretPosition"
    >
      <i
        aria-hidden="true"
        class="iconCaretDown error size16"
      />
    </div>
  </div>
</div>
`;
